Department entity class

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/demo-dao-jdbc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.28.jar=C:\\temp\\java-libs\\jdbc-connectors\\mysql-connector-java-8.0.28.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.28.jar}
+    ${libs.MySQL.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
